# python-configuration-system

./: .gitignore  .pre-commit-config.yaml  API.md  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  DESIGN.md  MILESTONES.md  README.md  pyproject.toml  requirements.txt
docs/: API-Reference.md  Architecture-Overview.md  Configuration.md  Design-Decisions.md  Folder-Structure.md  Quick-Start.md  Roadmap.md  Usage-Examples.md
docs/api/: README.md
examples/: README.md
examples/basic/: README.md
src/python_configuration_system/: __init__.py  diagnostics.py  errors.py  fields.py  loader.py  merge.py  paths.py  profiles.py  runtime.py  schema.py  types.py  validate.py
src/python_configuration_system/sources/: __init__.py  base.py  env.py  file.py  registry.py
tests/: __init__.py  test_diagnostics.py  test_loader.py  test_merge.py  test_repository_structure.py  test_runtime.py  test_schema.py  test_sources.py  test_validate.py
